fix header alignment

--- a/assets/css/style-no-dark-mode.css
+++ b/assets/css/style-no-dark-mode.css
@@ -414,7 +414,8 @@ footer {
     width: auto;
   }
   header {
-    padding-right: 400px;
+    padding-right: 0;
+    margin-left: 0;
   }
   section {
     border: 1px solid #e5e5e5;
@@ -453,6 +454,7 @@ footer {
   }
   header {
     padding: 0;
+    margin-left: 0;
   }
   pre, code {
     word-wrap: normal;
