--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -488,7 +488,8 @@ footer {
     width: auto;
   }
   header {
-    padding-right: 400px;
+    padding-right: 0;
+    margin-left: 0;
   }
   section {
     border: 1px solid #e5e5e5;
@@ -527,6 +528,7 @@ footer {
   }
   header {
     padding: 0;
+    margin-left: 0;
   }
   pre, code {
     word-wrap: normal;
